--- a/WabiSabiTeamProject/Feature/Summary/View/Summary.storyboard
+++ b/WabiSabiTeamProject/Feature/Summary/View/Summary.storyboard
@@ -7,6 +7,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-Pro-Display-Bold.otf">
+            <string>SFProDisplay-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Summary-->
         <scene sceneID="s0d-6b-0kx">
@@ -20,11 +25,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ys1-54-UiQ">
-                                        <rect key="frame" x="15" y="100" width="152" height="40"/>
+                                        <rect key="frame" x="15" y="100" width="150" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Yxw-oA-b3E"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="34"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -44,9 +49,9 @@
                                     <constraint firstAttribute="trailing" secondItem="7B3-JX-nWw" secondAttribute="trailing" constant="15" id="N0X-5W-r1j"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bWM-Bp-Fz0">
-                                <rect key="frame" x="0.0" y="214" width="414" height="648"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.60358361484242129" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bWM-Bp-Fz0">
+                                <rect key="frame" x="0.0" y="170" width="414" height="692"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -55,7 +60,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Nlc-Ba-dnY" secondAttribute="trailing" id="AAz-aF-OBe"/>
                             <constraint firstItem="Nlc-Ba-dnY" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="BOB-Sm-mag"/>
                             <constraint firstItem="Nlc-Ba-dnY" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="ImE-uo-Rp5"/>
-                            <constraint firstItem="bWM-Bp-Fz0" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="170" id="YgE-gv-Yv9"/>
+                            <constraint firstItem="bWM-Bp-Fz0" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="170" id="YgE-gv-Yv9"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bWM-Bp-Fz0" secondAttribute="bottom" id="ioN-25-gGa"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bWM-Bp-Fz0" secondAttribute="trailing" id="mBt-k5-wNU"/>
                             <constraint firstItem="bWM-Bp-Fz0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="rkV-0I-eBS"/>
