--- a/WabiSabiTeamProject/Feature/Summary/View/SummaryAwards/SummaryAwardsCollectionViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Summary/View/SummaryAwards/SummaryAwardsCollectionViewCell.xib
@@ -8,6 +8,14 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-Pro-Rounded-Bold.otf">
+            <string>SFProRounded-Bold</string>
+        </array>
+        <array key="SF-Pro-Rounded-Regular.otf">
+            <string>SFProRounded-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -27,16 +35,16 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Award" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lb5-zV-Cvn">
-                        <rect key="frame" x="10" y="115" width="115" height="24"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <rect key="frame" x="10" y="115" width="115" height="20.5"/>
+                        <fontDescription key="fontDescription" name="SFProRounded-Bold" family="SF Pro Rounded" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hyc-aK-o0y">
-                        <rect key="frame" x="10" y="139" width="115" height="21"/>
+                        <rect key="frame" x="10" y="135.5" width="115" height="24.5"/>
                         <string key="text">Award condition
 </string>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <fontDescription key="fontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -57,6 +65,8 @@
             </constraints>
             <size key="customSize" width="135" height="170"/>
             <connections>
+                <outlet property="labelDetail" destination="hyc-aK-o0y" id="bon-2U-ptu"/>
+                <outlet property="labelTitle" destination="Lb5-zV-Cvn" id="hLp-GC-Ynq"/>
                 <outlet property="viewCircle" destination="fFh-wj-Ypx" id="gho-xd-0Jo"/>
             </connections>
             <point key="canvasLocation" x="199.27536231884059" y="170.75892857142856"/>
