--- a/WabiSabiTeamProject/Feature/Summary/View/SummaryCalendar/SummaryCalendarTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Summary/View/SummaryCalendar/SummaryCalendarTableViewCell.xib
@@ -8,6 +8,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-Pro-Rounded-Bold.otf">
+            <string>SFProRounded-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,10 +24,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weT-Vi-Mdb">
-                        <rect key="frame" x="10" y="10" width="350" height="402"/>
+                        <rect key="frame" x="15" y="15" width="340" height="392"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lgx-0w-Ykm">
-                                <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
+                                <rect key="frame" x="0.0" y="0.0" width="340" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gld-kE-6MJ">
                                         <rect key="frame" x="15" y="10" width="30" height="30"/>
@@ -32,21 +37,25 @@
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system" title=" "/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system" title=" ">
+                                            <fontDescription key="titleFontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="17"/>
+                                        </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H7p-u6-vqb">
-                                        <rect key="frame" x="305" y="10" width="30" height="30"/>
+                                        <rect key="frame" x="295" y="10" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="erB-2J-0mt"/>
                                             <constraint firstAttribute="height" constant="30" id="khk-XL-MXc"/>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system" title=" "/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system" title=" ">
+                                            <fontDescription key="titleFontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="17"/>
+                                        </buttonConfiguration>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bulan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6yB-uH-edh">
-                                        <rect key="frame" x="60" y="14.5" width="230" height="21"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <rect key="frame" x="60" y="15" width="220" height="20.5"/>
+                                        <fontDescription key="fontDescription" name="SFProRounded-Bold" family="SF Pro Rounded" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -65,13 +74,13 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4FV-CW-iod">
-                                <rect key="frame" x="0.0" y="50" width="350" height="35"/>
+                                <rect key="frame" x="0.0" y="50" width="340" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="exh-aW-LvH"/>
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4MW-aW-e7t">
-                                <rect key="frame" x="0.0" y="85" width="350" height="317"/>
+                                <rect key="frame" x="0.0" y="85" width="340" height="307"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RdU-dq-xcH">
                                     <size key="itemSize" width="128" height="128"/>
@@ -97,15 +106,16 @@
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="weT-Vi-Mdb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="4dC-w2-l6S"/>
-                    <constraint firstItem="weT-Vi-Mdb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="5xC-BI-lNy"/>
-                    <constraint firstAttribute="trailing" secondItem="weT-Vi-Mdb" secondAttribute="trailing" constant="10" id="IJP-cY-dB6"/>
-                    <constraint firstAttribute="bottom" secondItem="weT-Vi-Mdb" secondAttribute="bottom" constant="10" id="Tea-N9-L4e"/>
+                    <constraint firstItem="weT-Vi-Mdb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="4dC-w2-l6S"/>
+                    <constraint firstItem="weT-Vi-Mdb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="5xC-BI-lNy"/>
+                    <constraint firstAttribute="trailing" secondItem="weT-Vi-Mdb" secondAttribute="trailing" constant="15" id="IJP-cY-dB6"/>
+                    <constraint firstAttribute="bottom" secondItem="weT-Vi-Mdb" secondAttribute="bottom" constant="15" id="Tea-N9-L4e"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="buttonLeft" destination="gld-kE-6MJ" id="FqQ-Ur-bWg"/>
                 <outlet property="buttonRight" destination="H7p-u6-vqb" id="FpI-CU-fD6"/>
