--- a/WabiSabiTeamProject/Feature/AddRoutine/View/AddRoutine.storyboard
+++ b/WabiSabiTeamProject/Feature/AddRoutine/View/AddRoutine.storyboard
@@ -114,7 +114,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-8U-4KC">
-                                <rect key="frame" x="0.0" y="44" width="414" height="250"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                 <color key="backgroundColor" name="ColorPrimary"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="ai6-yC-xYp"/>
@@ -127,6 +127,9 @@
                                         <rect key="frame" x="15" y="9.5" width="56" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="YqF-f5-mFH" eventType="touchUpInside" id="2Vp-Gl-l1p"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -137,20 +140,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🌓 Skin Care" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKt-bf-czG">
-                                <rect key="frame" x="20" y="114" width="100" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20" y="114" width="159" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skin Care Guide" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iF8-Bd-xqY">
-                                <rect key="frame" x="20" y="160" width="122" height="21"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EEl-xM-61c">
-                                <rect key="frame" x="0.0" y="206" width="414" height="656"/>
+                                <rect key="frame" x="0.0" y="199" width="414" height="663"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product used" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFZ-md-aQc">
                                         <rect key="frame" x="20" y="15" width="102" height="21"/>
@@ -164,7 +160,7 @@
                                         <buttonConfiguration key="configuration" style="plain" title="Edit"/>
                                     </button>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Z3M-WS-p8T">
-                                        <rect key="frame" x="15" y="46" width="384" height="600"/>
+                                        <rect key="frame" x="15" y="46" width="384" height="607"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableView>
                                 </subviews>
@@ -186,12 +182,10 @@
                         <constraints>
                             <constraint firstItem="yZX-Du-Oys" firstAttribute="top" secondItem="R2K-GK-Xl4" secondAttribute="top" id="3NN-zO-fyL"/>
                             <constraint firstItem="R2K-GK-Xl4" firstAttribute="trailing" secondItem="hZ5-8U-4KC" secondAttribute="trailing" id="42x-Lt-ZXm"/>
-                            <constraint firstItem="iF8-Bd-xqY" firstAttribute="leading" secondItem="R2K-GK-Xl4" secondAttribute="leading" constant="20" id="7fF-PN-Xq9"/>
-                            <constraint firstItem="iF8-Bd-xqY" firstAttribute="top" secondItem="fKt-bf-czG" secondAttribute="bottom" constant="25" id="BTy-y2-TMI"/>
-                            <constraint firstItem="EEl-xM-61c" firstAttribute="top" secondItem="iF8-Bd-xqY" secondAttribute="bottom" constant="25" id="E3r-Ea-8tn"/>
+                            <constraint firstItem="EEl-xM-61c" firstAttribute="top" secondItem="fKt-bf-czG" secondAttribute="bottom" constant="50" id="DtL-2h-6Gu"/>
                             <constraint firstItem="R2K-GK-Xl4" firstAttribute="bottom" secondItem="EEl-xM-61c" secondAttribute="bottom" id="JPk-We-F5G"/>
                             <constraint firstItem="yZX-Du-Oys" firstAttribute="leading" secondItem="R2K-GK-Xl4" secondAttribute="leading" id="OvW-Id-3Ea"/>
-                            <constraint firstItem="hZ5-8U-4KC" firstAttribute="top" secondItem="R2K-GK-Xl4" secondAttribute="top" id="QZ7-tJ-A55"/>
+                            <constraint firstItem="hZ5-8U-4KC" firstAttribute="top" secondItem="lk5-Bz-Uhw" secondAttribute="top" id="QZ7-tJ-A55"/>
                             <constraint firstItem="R2K-GK-Xl4" firstAttribute="trailing" secondItem="yZX-Du-Oys" secondAttribute="trailing" id="UdV-BL-eS0"/>
                             <constraint firstItem="fKt-bf-czG" firstAttribute="leading" secondItem="R2K-GK-Xl4" secondAttribute="leading" constant="20" id="ZDO-Kk-Ek3"/>
                             <constraint firstItem="hZ5-8U-4KC" firstAttribute="leading" secondItem="R2K-GK-Xl4" secondAttribute="leading" id="bbS-gt-G7G"/>
@@ -202,8 +196,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="mqL-hh-54m"/>
                     <connections>
+                        <outlet property="backButton" destination="aw3-PP-Fds" id="fp3-fA-7bT"/>
                         <outlet property="routineTableView" destination="Z3M-WS-p8T" id="fgK-7e-d5P"/>
                         <segue destination="ZpM-g2-4jm" kind="show" identifier="moveToAddProduct" id="xsd-M1-9K8"/>
+                        <segue destination="Nx4-ue-bJP" kind="show" identifier="moveToLocationReminder" id="B5b-15-0Ju"/>
+                        <segue destination="AWk-Ig-Ez4" kind="show" identifier="moveToTimeReminder" id="JB2-li-gqO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gvs-rK-S03" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -219,6 +216,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n9q-6e-QkT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1672" y="-673"/>
+        </scene>
+        <!--timerReminderVC-->
+        <scene sceneID="gFw-8G-HaS">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TimerReminder" referencedIdentifier="timerReminderVC" id="AWk-Ig-Ez4" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="BVR-On-4JT"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GUI-mG-UHE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1682" y="-581"/>
+        </scene>
+        <!--locationReminderVC-->
+        <scene sceneID="5cJ-Lh-IsP">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LocationReminder" referencedIdentifier="locationReminderVC" id="Nx4-ue-bJP" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="XiK-Ag-Taa"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6l9-WF-wTq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1672" y="-504"/>
         </scene>
     </scenes>
     <resources>
