--- a/WabiSabiTeamProject/Feature/AddRoutine/View/TimerReminderTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/AddRoutine/View/TimerReminderTableViewCell.xib
@@ -27,18 +27,30 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Afs-8W-EE7">
                         <rect key="frame" x="15" y="41" width="290" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="􀎪 None" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vlX-GL-lNa">
-                                <rect key="frame" x="5" y="14.5" width="64.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="None" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vlX-GL-lNa">
+                                <rect key="frame" x="55" y="14.5" width="41" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alarm" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="z4x-eO-asM">
+                                <rect key="frame" x="10" y="9.5" width="30" height="29.5"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="qFC-fs-OSU"/>
+                                    <constraint firstAttribute="width" constant="30" id="yKA-Gu-Igk"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="z4x-eO-asM" firstAttribute="centerY" secondItem="Afs-8W-EE7" secondAttribute="centerY" id="56T-pO-r8n"/>
+                            <constraint firstAttribute="bottom" secondItem="z4x-eO-asM" secondAttribute="bottom" constant="10" id="Ewk-gI-pQp"/>
                             <constraint firstAttribute="height" constant="50" id="O8b-Xd-GWY"/>
+                            <constraint firstItem="z4x-eO-asM" firstAttribute="leading" secondItem="Afs-8W-EE7" secondAttribute="leading" constant="10" id="Zhr-v8-Tkx"/>
                             <constraint firstItem="vlX-GL-lNa" firstAttribute="centerY" secondItem="Afs-8W-EE7" secondAttribute="centerY" id="nfS-0l-IIh"/>
-                            <constraint firstItem="vlX-GL-lNa" firstAttribute="leading" secondItem="Afs-8W-EE7" secondAttribute="leading" constant="5" id="uu4-wU-lgq"/>
+                            <constraint firstItem="z4x-eO-asM" firstAttribute="top" secondItem="Afs-8W-EE7" secondAttribute="top" constant="10" id="ro4-nW-478"/>
+                            <constraint firstItem="vlX-GL-lNa" firstAttribute="leading" secondItem="z4x-eO-asM" secondAttribute="trailing" constant="15" id="wWo-4k-Vrq"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="You can add up to 3 location reminders" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rqw-QM-dGh">
@@ -71,6 +83,10 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="alarm" catalog="system" width="124" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
