--- a/WabiSabiTeamProject/Feature/LocationReminder/LocationReminder.storyboard
+++ b/WabiSabiTeamProject/Feature/LocationReminder/LocationReminder.storyboard
@@ -122,14 +122,150 @@ Add one by tapping the + button</string>
                         <outlet property="locationsReminderTableView" destination="jLW-aC-Gtt" id="HXq-XE-BJF"/>
                         <outlet property="viewCircle" destination="aUJ-hk-a89" id="jmD-fO-V7i"/>
                         <outlet property="viewEmptyState" destination="JMw-8s-3pE" id="bXH-sy-MYa"/>
+                        <segue destination="ivj-ER-xU9" kind="show" identifier="GoToAddGeoLocationPage" id="w4g-z8-i7T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="63.768115942028992" y="80.357142857142847"/>
         </scene>
+        <!--Add Geotification Controller-->
+        <scene sceneID="y3Q-Zg-74F">
+            <objects>
+                <viewController id="ivj-ER-xU9" customClass="AddGeotificationController" customModule="WabiSabiTeamProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2HO-ff-EUO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uyJ-fV-mlZ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BHL-b5-SwZ">
+                                        <rect key="frame" x="148" y="14.5" width="118" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mg4-HR-FrY">
+                                        <rect key="frame" x="15" y="9.5" width="56" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="ivj-ER-xU9" eventType="touchUpInside" id="5Ht-Fn-MwE"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQD-tU-U2F">
+                                        <rect key="frame" x="348" y="9.5" width="56" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                        <connections>
+                                            <action selector="buttonSavePressed:" destination="ivj-ER-xU9" eventType="touchUpInside" id="6fI-5f-wHD"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NCJ-BH-wdO">
+                                        <rect key="frame" x="293.5" y="9.5" width="44.5" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="location.viewfinder" catalog="system"/>
+                                        <connections>
+                                            <action selector="locationFinderButtonPressed:" destination="ivj-ER-xU9" eventType="touchUpInside" id="Bsq-sI-H2f"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="WQD-tU-U2F" firstAttribute="leading" secondItem="NCJ-BH-wdO" secondAttribute="trailing" constant="10" id="5kW-e2-Dh3"/>
+                                    <constraint firstItem="mg4-HR-FrY" firstAttribute="centerY" secondItem="uyJ-fV-mlZ" secondAttribute="centerY" id="Me1-tV-ztQ"/>
+                                    <constraint firstItem="NCJ-BH-wdO" firstAttribute="centerY" secondItem="uyJ-fV-mlZ" secondAttribute="centerY" id="TNY-TB-x2W"/>
+                                    <constraint firstItem="WQD-tU-U2F" firstAttribute="centerY" secondItem="uyJ-fV-mlZ" secondAttribute="centerY" id="U0O-Hl-1GP"/>
+                                    <constraint firstAttribute="trailing" secondItem="WQD-tU-U2F" secondAttribute="trailing" constant="10" id="WFb-of-pPP"/>
+                                    <constraint firstItem="mg4-HR-FrY" firstAttribute="leading" secondItem="uyJ-fV-mlZ" secondAttribute="leading" constant="15" id="fjd-Vo-uZq"/>
+                                    <constraint firstItem="BHL-b5-SwZ" firstAttribute="centerY" secondItem="uyJ-fV-mlZ" secondAttribute="centerY" id="kvw-id-LLl"/>
+                                    <constraint firstItem="BHL-b5-SwZ" firstAttribute="centerX" secondItem="uyJ-fV-mlZ" secondAttribute="centerX" id="s2U-k8-HnR"/>
+                                    <constraint firstAttribute="height" constant="50" id="wT8-Pp-10P"/>
+                                </constraints>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="jCh-N6-VSe">
+                                <rect key="frame" x="0.0" y="50" width="414" height="358"/>
+                            </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cQq-Lf-LPx">
+                                <rect key="frame" x="0.0" y="408" width="414" height="400"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I want to be reminded when I’m . . . " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pW3-gr-45Q">
+                                        <rect key="frame" x="15" y="15" width="384" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gsS-1T-UTT">
+                                        <rect key="frame" x="15" y="51" width="384" height="32"/>
+                                        <segments>
+                                            <segment title="Leaving"/>
+                                            <segment title="Arriving"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wHd-Pg-4ru">
+                                        <rect key="frame" x="15" y="92" width="384" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="YvR-3O-hmf">
+                                        <rect key="frame" x="0.0" y="141" width="414" height="259"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="wHd-Pg-4ru" secondAttribute="trailing" constant="15" id="33w-Tk-UXJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="YvR-3O-hmf" secondAttribute="trailing" id="4lD-DD-tLZ"/>
+                                    <constraint firstItem="YvR-3O-hmf" firstAttribute="leading" secondItem="cQq-Lf-LPx" secondAttribute="leading" id="6IV-Hs-NPO"/>
+                                    <constraint firstItem="YvR-3O-hmf" firstAttribute="top" secondItem="wHd-Pg-4ru" secondAttribute="bottom" constant="15" id="EfE-X1-0eB"/>
+                                    <constraint firstAttribute="height" constant="400" id="Knz-YV-pZu"/>
+                                    <constraint firstItem="pW3-gr-45Q" firstAttribute="top" secondItem="cQq-Lf-LPx" secondAttribute="top" constant="15" id="MhI-kQ-YMo"/>
+                                    <constraint firstItem="pW3-gr-45Q" firstAttribute="leading" secondItem="cQq-Lf-LPx" secondAttribute="leading" constant="15" id="RSv-An-iY8"/>
+                                    <constraint firstItem="wHd-Pg-4ru" firstAttribute="leading" secondItem="cQq-Lf-LPx" secondAttribute="leading" constant="15" id="SCH-s7-HZL"/>
+                                    <constraint firstItem="gsS-1T-UTT" firstAttribute="leading" secondItem="cQq-Lf-LPx" secondAttribute="leading" constant="15" id="Tmn-Uy-D2p"/>
+                                    <constraint firstAttribute="trailing" secondItem="pW3-gr-45Q" secondAttribute="trailing" constant="15" id="YXe-5Y-QyQ"/>
+                                    <constraint firstItem="wHd-Pg-4ru" firstAttribute="top" secondItem="gsS-1T-UTT" secondAttribute="bottom" constant="10" id="iyh-ro-UH4"/>
+                                    <constraint firstItem="gsS-1T-UTT" firstAttribute="top" secondItem="pW3-gr-45Q" secondAttribute="bottom" constant="15" id="jim-v2-y88"/>
+                                    <constraint firstAttribute="trailing" secondItem="gsS-1T-UTT" secondAttribute="trailing" constant="15" id="rsY-Fs-ikg"/>
+                                    <constraint firstAttribute="bottom" secondItem="YvR-3O-hmf" secondAttribute="bottom" id="uEq-Rd-3OW"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ckG-Q0-DPO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cQq-Lf-LPx" firstAttribute="top" secondItem="jCh-N6-VSe" secondAttribute="bottom" id="7EN-t6-lff"/>
+                            <constraint firstItem="ckG-Q0-DPO" firstAttribute="trailing" secondItem="jCh-N6-VSe" secondAttribute="trailing" id="Maw-EN-x8m"/>
+                            <constraint firstItem="ckG-Q0-DPO" firstAttribute="bottom" secondItem="cQq-Lf-LPx" secondAttribute="bottom" id="frl-gT-ReT"/>
+                            <constraint firstItem="ckG-Q0-DPO" firstAttribute="trailing" secondItem="uyJ-fV-mlZ" secondAttribute="trailing" id="hja-w1-DRl"/>
+                            <constraint firstItem="uyJ-fV-mlZ" firstAttribute="top" secondItem="ckG-Q0-DPO" secondAttribute="top" id="iUG-RL-4os"/>
+                            <constraint firstItem="cQq-Lf-LPx" firstAttribute="leading" secondItem="ckG-Q0-DPO" secondAttribute="leading" id="mio-Vd-NU7"/>
+                            <constraint firstItem="uyJ-fV-mlZ" firstAttribute="leading" secondItem="ckG-Q0-DPO" secondAttribute="leading" id="o2z-7e-zuS"/>
+                            <constraint firstItem="jCh-N6-VSe" firstAttribute="top" secondItem="uyJ-fV-mlZ" secondAttribute="bottom" id="pFA-L4-cLf"/>
+                            <constraint firstItem="jCh-N6-VSe" firstAttribute="leading" secondItem="ckG-Q0-DPO" secondAttribute="leading" id="pRA-vn-sTr"/>
+                            <constraint firstItem="ckG-Q0-DPO" firstAttribute="trailing" secondItem="cQq-Lf-LPx" secondAttribute="trailing" id="tqJ-dK-bTv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="rLB-Hh-JrS"/>
+                    <connections>
+                        <outlet property="backButton" destination="mg4-HR-FrY" id="KgG-gQ-oPy"/>
+                        <outlet property="buttonSave" destination="WQD-tU-U2F" id="6DH-Ec-7f6"/>
+                        <outlet property="eventTypeSegmentedControl" destination="gsS-1T-UTT" id="E4M-Df-MNf"/>
+                        <outlet property="labelTitle" destination="BHL-b5-SwZ" id="X1m-zo-GrF"/>
+                        <outlet property="locationFinderButton" destination="NCJ-BH-wdO" id="2OU-lG-uUy"/>
+                        <outlet property="mapView" destination="jCh-N6-VSe" id="abh-Xp-kKg"/>
+                        <outlet property="searchResultTableView" destination="YvR-3O-hmf" id="Dsk-Xa-wqf"/>
+                        <outlet property="searchTextField" destination="wHd-Pg-4ru" id="jIz-Ws-O5N"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1P2-bM-dlk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="961" y="80"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="location.viewfinder" catalog="system" width="128" height="115"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
